Added trivial 'TestLang' example